@@ -1,1 +1,3 @@
 MD5 a72c2bc257c404cdbae01d584ce77686 upx-1.25-linux.tar.gz 161636
+RMD160 0f2ddde8ff6d1fc49fc904e6e9aad73dafd6500c upx-1.25-linux.tar.gz 161636
+SHA256 85e4a2d25433fb4a1e87661c5528ed626e74c4e610ab9599a23e833d1b3c50b9 upx-1.25-linux.tar.gz 161636
