@@ -1,0 +1,9 @@
+MD5 e4ca3d25489d5c8c2fc2c0d8985e798c upx-2.02-amd64_linux.tar.gz 279596
+RMD160 28a809515645eef0fe32cb9a24f8040ec8bbf75e upx-2.02-amd64_linux.tar.gz 279596
+SHA256 1dadf7f3371bc428502c8c9a58e578da28b0552fef7a6282d05a0564a3fac4c0 upx-2.02-amd64_linux.tar.gz 279596
+MD5 42e8cf57c57e69fbf714b4e5345a35d6 upx-2.02-i386_linux.tar.gz 262696
+RMD160 48250d8e0d7edc7f6f37cb493b5ec0d65d27f2e3 upx-2.02-i386_linux.tar.gz 262696
+SHA256 8a273f6debab152c91c49c63c15f1ee47c4156508f83dadbd994dedd23eacd5f upx-2.02-i386_linux.tar.gz 262696
+MD5 eda46445627066747447c9c454b7236d upx-2.02-powerpc_linux.tar.gz 283227
+RMD160 2c13532f5e096fa01f66e8adca5b30346e31b763 upx-2.02-powerpc_linux.tar.gz 283227
+SHA256 0963a3d70089a19f7258afb7b7613458396884f4d1d10652e0735ea0d16e8cb7 upx-2.02-powerpc_linux.tar.gz 283227
