@@ -1,6 +1,13 @@
 # ChangeLog for app-arch/upx
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.14 2005/11/05 07:56:20 matsuu Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/upx/Attic/ChangeLog,v 1.15 2006/09/09 01:45:07 matsuu Exp $
+
+*upx-2.02 (09 Sep 2006)
+
+  09 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> -upx-1.24-r1.ebuild,
+  -upx-1.93.ebuild, +upx-2.02.ebuild:
+  Version bumped, bug 145049.
+  Removed old versions.
 
 *upx-1.93 (05 Nov 2005)
 
